--- a/JewelryPOS.App/Views/Settings/SettingsView.xaml
+++ b/JewelryPOS.App/Views/Settings/SettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="JewelryPOS.App.Views.SettingsWindow"
+﻿<UserControl x:Class="JewelryPOS.App.Views.Settings.SettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -30,32 +30,15 @@
                         </StackPanel>
                     </Button>
                 </StackPanel>
-                <!-- Alt Çizgi -->
-                <!--<Border Grid.Row="1" Background="#E0E0E0"/>-->
             </Grid>
-
         </Border>
 
         <!-- İçerik Alanı -->
-        <Border Margin="20,80,20,20" Background="#FFFFFF" CornerRadius="10" Padding="30">
+        <Border Margin="0,80,0,0" Background="#FFFFFF" CornerRadius="10" Padding="0">
             <Border.Effect>
                 <DropShadowEffect Color="#B0B0B0" Direction="270" ShadowDepth="2" Opacity="0.2"/>
             </Border.Effect>
-            <ContentControl Content="{Binding CurrentContent}">
-                <!-- Örnek İçerikler -->
-                <ContentControl.ContentTemplate>
-                    <DataTemplate>
-                        <StackPanel>
-                            <TextBlock Text="{Binding UserSettingsMessage}" FontSize="16" 
-                                       FontFamily="Segoe UI" Foreground="#333333" Margin="0,0,0,10"
-                                       Visibility="{Binding Path=., Converter={StaticResource TypeToVisibilityConverter}, ConverterParameter=UserSettingsViewModel}"/>
-                            <TextBlock Text="{Binding AppSettingsMessage}" FontSize="16" 
-                                       FontFamily="Segoe UI" Foreground="#333333" Margin="0,0,0,10"
-                                       Visibility="{Binding Path=., Converter={StaticResource TypeToVisibilityConverter}, ConverterParameter=AppSettingsViewModel}"/>
-                        </StackPanel>
-                    </DataTemplate>
-                </ContentControl.ContentTemplate>
-            </ContentControl>
+            <ContentControl Content="{Binding CurrentContent}"/>
         </Border>
     </Grid>
 </UserControl>
