--- a/JewelryPOS.App/Views/LoginWindow.xaml
+++ b/JewelryPOS.App/Views/LoginWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JewelryPOS.App.ViewModels"
         mc:Ignorable="d"
-        Title="Jewelry POS - Giriş" Height="611" Width="800" 
+        Title="ZirconPulse - Giriş" Height="611" Width="800" 
         ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid Background="#FAFAFA">
         <!-- Başlık -->
-        <TextBlock Text="Jewelry POS" HorizontalAlignment="Center" VerticalAlignment="Top" 
+        <TextBlock Text="ZirconPulse" HorizontalAlignment="Center" VerticalAlignment="Top" 
                    Margin="0,60,0,0" Style="{StaticResource FormHeaderStyle}"/>
 
         <!-- Login Form -->
