--- a/JewelryPOS.App/Views/MainWindow.xaml
+++ b/JewelryPOS.App/Views/MainWindow.xaml
@@ -4,18 +4,25 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Jewelry POS"
+        Title="ZirconPulse"
         WindowState="Maximized"
         MinWidth="980" MinHeight="840"
         Background="#FAFAFA">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <!-- Ana içerik alanı -->
+            <RowDefinition Height="31"/>
+            <!-- Footer -->
+        </Grid.RowDefinitions>
+
         <!-- Sol Menü -->
-        <Border Background="#2C3E50" Width="220" HorizontalAlignment="Left" CornerRadius="0,10,10,0">
+        <Border Grid.Row="0" Background="#2C3E50" Width="220" HorizontalAlignment="Left" CornerRadius="0,10,0,0">
             <Border.Effect>
                 <DropShadowEffect Color="#B0B0B0" Direction="0" ShadowDepth="2" Opacity="0.3"/>
             </Border.Effect>
             <StackPanel>
-                <TextBlock Text="Jewelry POS" Style="{StaticResource FormHeaderStyle}" 
+                <TextBlock Text="ZirconPulse" Style="{StaticResource FormHeaderStyle}" 
                            Foreground="White" HorizontalAlignment="Center" Margin="0,20,0,30"/>
 
                 <Button Style="{StaticResource MenuButtonStyle}" Command="{Binding OpenHomeCommand}">
@@ -46,7 +53,7 @@
         </Border>
 
         <!-- Üst Bar -->
-        <Border Background="White" Height="60" VerticalAlignment="Top" Padding="20,10" Margin="220,0,0,0">
+        <Border Grid.Row="0" Background="White" Height="60" VerticalAlignment="Top" Padding="20,10" Margin="220,0,0,0">
             <Border.Effect>
                 <DropShadowEffect Color="#B0B0B0" Direction="270" ShadowDepth="2" Opacity="0.2"/>
             </Border.Effect>
@@ -72,11 +79,21 @@
         </Border>
 
         <!-- Ana İçerik Alanı -->
-        <Border Margin="230,70,20,20" Background="#FAFAFA" CornerRadius="10" Padding="10">
+        <Border Grid.Row="0" Margin="230,70,20,10" Background="#FAFAFA" CornerRadius="10" Padding="10">
             <Border.Effect>
                 <DropShadowEffect Color="#B0B0B0" Direction="270" ShadowDepth="2" Opacity="0.2"/>
             </Border.Effect>
             <ContentControl Content="{Binding CurrentView}"/>
+        </Border>
+
+        <!-- Footer -->
+        <Border Grid.Row="1" Background="#2C3E50" Padding="10">
+            <TextBlock Text="© 2025 ZirconPulse - Tüm Hakları Saklıdır" 
+                       Foreground="AntiqueWhite" 
+                       FontSize="12" 
+                       FontFamily="Segoe UI" 
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Center"/>
         </Border>
     </Grid>
 </Window>
